<resources>
    <string name="app_name">LuluFindy</string>
    <string name="sign_in">Σύνδεση</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="sign_up">Εγγραφή</string>
    <string name="hint">hint</string>
    <string name="no_account">Δεν έχεις λογαριασμό;</string>
    <string name="already_have_an_account">Έχεις λογαριασμό;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_parking_space">🔍 Αναζήτηση Θέσης</string>
    <string name="wallet2">👛 Πορτοφόλι</string>
    <string name="payment">💸 Ολοκλήρωση / Πληρωμή</string>
    <string name="start_parking">🚗 Έναρξη Στάθμευσης</string>
    <string name="aloha">Say aloha to no more parking stress</string>
    <string name="remain_euros">0,0€</string>
    <string name="wallet_icon">👛</string>
    <string name="hello_user">Hello user!</string>
    <string name="name">Ονομα</string>
    <string name="car_license_plate">Αριθμός Κυκλοφορίας</string>
    <string name="parking">Τύπος Parking</string>
    <string name="last_name">Επώνυμο</string>
    <string name="todo">TODO</string>
    <string name="manage_spaces">⚙️ Διαχείριση Χώρων Στάθμευσης</string>
    <string name="parked">Στάθμευση</string>
    <string name="payment2">Πληρωμή</string>
    <string name="search">Αναζήτηση</string>
    <string name="wallet3">Πορτοφόλι</string>
    <string name="manage_space">Διαχείριση Χώρων Στάθμευσης</string>
    <string name="logout">Αποσύνδεση</string>
    <string name="title_activity_classic_parking">ClassicParking</string>
    <string name="title">Επίλεξε θέση parking</string>
    <string name="backArray">Πίσω</string>
    <string name="title_activity_electric_parkings">electric_parkings</string>
    <string name="title_activity_disabled_parking">DisabledParking</string>
    <string name="start">Έναρξη</string>
    <string name="time">Χρόνος</string>
    <string name="charge">Χρέωση</string>
    <string name="license_plate">Πινακίδες</string>
    <string name="parking_space">επιλογή θέσης</string>
    <string name="stop">Λήξη</string>
    <string name="startpark">🚗 Έναρξη Στάθμευσης</string>
    <string name="paymentprocess">💸 Ολοκλήρωση / Πληρωμή</string>
    <string name="searchpark">🔍 Αναζήτηση Θέσης</string>
    <string name="walletprocess">👛 Πορτοφόλι</string>
    <string name="manage">⚙️ Διαχείριση Χώρων Στάθμευσης</string>
    <string name="history_of_parking">Ιστορικό δεσμευμένων θέσεων στάθμευσης:</string>
    <string name="no_history">Το ιστορικό κρατήσεων είναι άδειο</string>
    <string name="parking_time">Πληροφορίες χρόνου στάθμευσης:</string>
    <string name="title_activity_start_classic_parkig">StartClassicParkig</string>
    <string name="title_activity_start_classic_parking">StartClassicParking</string>
    <string name="selected_parking">Επιλεγμένη θέση:</string>
    <string name="warning">❗Πατήστε έναρξη αφού σταθμεύσετε</string>
    <string name="title_activity_start_electric_parking">StartElectricParking</string>
    <string name="title_activity_start_disabled_parking">StartDisabledParking</string>
    <string name="payment_message">Επιλέξτε τον τρόπο πληρωμής που προτιμάτε:</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="credit_card">Κάρτα</string>
    <string name="wallet">Πορτοφόλι</string>
    <string name="pay_button_text">ΠΛΗΡΩΜΗ</string>
    <string name="select_payment_method">Επιλέξτε μέθοδο πληρωμής</string>
    <string name="visa">Visa</string>
    <string name="card">Κάρτα</string>
    <string name="total_pay">Σύνολο:</string>
    <string name="amount_value">5.00€</string>
    <string name="face_id">Face ID</string>
    <string name="lulu_findy_logo">Λογότυπο Lulu Findy</string>
    <string name="goBack">Επιστροφή</string>
    <string name="complete_payment">Ολοκλήρωση Πληρωμής</string>
    <string name="payment_successful">Η πληρωμή ολοκληρώθηκε επιτυχώς</string>
    <string name="payment_successful_message">Η πληρωμή σας ολοκληρώθηκε με επιτυχία!</string>
    <string name="payment_method_value">Μέθοδος: Apple Pay</string>
    <string name="return_home">Επιστροφή στην αρχική</string>
    <string name="title_activity_apple_pay">ApplePayActivity</string>
    <string name="title_activity_google_pay">GooglePayActivity</string>
    <string name="pay_with_apple_pay">Πληρωμή με Apple Pay</string>
    <string name="charts">📊 Δραστηριότητα Χρήστη</string>
    <string name="chart1">Ιστορικό Στάθμευσης</string>
    <string name="chart2">Ιστορικό Πληρωμών</string>
    <string name="chart3">Χρόνοι Στάθμευσης</string>
    <string name="average_time">Διάρκεια Σταθμεύσεων</string>
    <string name="avg">Μέσος χρόνος Στάθμευσης:</string>

    <!-- Checkout activity -->
    <string name="title_activity_card_payment">CardPaymentActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="statistics">📊 Προβολή Στατιστικών</string>
    <string name="positions_choice">Στατιστικά θέσεων</string>
    <string name="incomes_choice">Παρακολούθηση εσόδων</string>
    <string name="incomes_history">Ιστορικό εσόδων</string>
    <string name="charts1">Στατιστικά</string>
    <string name="incomes">Έσοδα</string>

    <string name="get_code">Πάρε Κωδικό</string>
    <string name="back_to_log_in">Πίσω στην σύνδεση</string>
    <string name="reset_password">Επαναφορά Κωδικού</string>
    <string name="temp_code">Προσωρινός Κωδικός</string>
    <string name="give_your_email">Δώσε το Email σου:</string>
    <string name="add_parking">Προσθήκη Θέσης</string>
    <string name="parking_name">Όνομα Θέσης</string>
    <string name="next">Επόμενο</string>
    <string name="title_activity_management_map">ManagementMap</string>
    <string name="title_activity_management_map2">ManagementMap2</string>
    <string name="available_spaces">Διαθέσιμες Θέσεις:</string>
    <string name="lulu_findy_logo2">Lulu Findy Logo</string>
    <string name="VISA">VISA</string>
    <string name="_1234">**** **** **** 1234</string>
    <string name="apple_card_face_id">Apple Card/Face ID</string>
    <string name="payment_amount">Ποσό Πληρωμής:</string>
    <string name="apple_pay_payment">Πληρωμή με Apple Pay</string>
    <string name="thanks_apple_pay">Η πληρωμή με Apple Pay ολοκληρώθηκε επιτυχώς!\nΣας ευχαριστούμε.</string>
    <string name="nothing" />
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="credit">Credit card</string>
    <string name="name2">Name</string>
    <string name="card_number">Card number</string>
    <string name="expire_date2">Expire Date</string>
    <string name="pay_with_card">Πληρωμή με κάρτα</string>
    <string name="return2">Επιστροφή</string>
    <string name="forgot_password">Ξέχασες τον κωδικό;</string>
    <string name="close">🟥 ΚΛΕΙΣΤΑ</string>
    <string name="event">🟦 ΕΙΔΙΚΟ ΩΡΑΡΙΟ</string>
    <string name="open">🟩 ANOIXTA</string>
    <string name="clear_filter">Καθαρισμός Φίλτρου</string>
</resources>
