<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient_background"
    tools:context=".StartParking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/lulu_findy_logo"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/car_license_plate"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#ED6091"
                android:hint="@string/car_license_plate"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parking_type_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/parking">

            <AutoCompleteTextView
                android:id="@+id/parking_type"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#ED6091"
                android:dropDownWidth="match_parent"
                android:dropDownHeight="wrap_content"
                android:dropDownVerticalOffset="8dp"
                android:enabled="true"
                android:inputType="none"
                android:padding="12dp"
                android:textColorHint="@android:color/white"
                tools:ignore="LabelFor,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/areaCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="#ED6091"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/parking_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/selected_parking"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#ED6091"
                android:text="@string/start"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="#ED6091"
                android:text="@string/stop" />
        </FrameLayout>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/costTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/charge"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/back2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:backgroundTint="#ED6091"
            android:text="@string/backArray"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>
</ScrollView>
