<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient_background"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/give_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            app:srcCompat="@drawable/lulu_findy_logo" />

        <TextView
            android:id="@+id/forgot_password_title"
            android:layout_width="274dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="341dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/give_your_email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:ignore="DuplicateIds">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/pink_hover"
                android:hint="@string/email"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_reset_password"
            android:layout_width="263dp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/pink_hover"
            android:text="@string/get_code"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="341dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/back_to_log_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
