<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient_background"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            app:srcCompat="@drawable/lulu_findy_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/add_parking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_parking"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="272dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/pink_hover"
            android:popupBackground="@color/pink_hover" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parking_name"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/pink_hover"
                android:hint="@string/parking_name"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/pink_hover"
            android:text="@string/next" />

        <TextView
            android:id="@+id/available_spots_text"
            android:layout_width="357dp"
            android:layout_height="29dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/available_spaces"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ED6091"
            android:text="@string/backArray"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</ScrollView>

