<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_gradient_background"
    tools:context=".Sing_In">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="274dp"
            android:contentDescription="TODO"
            android:src="@drawable/lulu_findy_logo"
            tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck,ImageContrastCheck" />

        <TextView
            android:id="@+id/Sing_in"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#ED6091"
                android:hint="@string/email"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="272dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#ED6091"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:layout_width="183dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#ED6091"
            android:text="@string/sign_in"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/noAccount"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />

        <TextView
            android:id="@+id/Sing_up_page"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />
    </LinearLayout>
</ScrollView>
